@@ -11,6 +11,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.action.ActionListener;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.inference.InferenceResults;
@@ -18,15 +19,16 @@ import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.TaskCancelledException;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.xpack.core.ml.inference.TrainedModelPrefixStrings;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.InferenceConfig;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.NlpConfig;
 import org.elasticsearch.xpack.core.ml.utils.ExceptionsHelper;
 import org.elasticsearch.xpack.ml.inference.nlp.NlpTask;
+import org.elasticsearch.xpack.ml.inference.nlp.tokenizers.NlpTokenizer;
 import org.elasticsearch.xpack.ml.inference.nlp.tokenizers.TokenizationResult;
 import org.elasticsearch.xpack.ml.inference.pytorch.results.PyTorchResult;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.core.Strings.format;
@@ -39,6 +41,8 @@ class InferencePyTorchAction extends AbstractPyTorchAction<InferenceResults> {
     private final NlpInferenceInput input;
     @Nullable
     private final CancellableTask parentActionTask;
+    private final TrainedModelPrefixStrings.PrefixType prefixType;
+    private final boolean chunkResponse;
 
     InferencePyTorchAction(
         String deploymentId,
@@ -47,14 +51,18 @@ class InferencePyTorchAction extends AbstractPyTorchAction<InferenceResults> {
         DeploymentManager.ProcessContext processContext,
         InferenceConfig config,
         NlpInferenceInput input,
+        TrainedModelPrefixStrings.PrefixType prefixType,
         ThreadPool threadPool,
         @Nullable CancellableTask parentActionTask,
+        boolean chunkResponse,
         ActionListener<InferenceResults> listener
     ) {
         super(deploymentId, requestId, timeout, processContext, threadPool, listener);
         this.config = config;
         this.input = input;
+        this.prefixType = prefixType;
         this.parentActionTask = parentActionTask;
+        this.chunkResponse = chunkResponse;
     }
 
     private boolean isCancelled() {
@@ -83,15 +91,52 @@ class InferencePyTorchAction extends AbstractPyTorchAction<InferenceResults> {
 
         final String requestIdStr = String.valueOf(getRequestId());
         try {
+            String inputText = input.extractInput(getProcessContext().getModelInput().get());
+            if (prefixType != TrainedModelPrefixStrings.PrefixType.NONE) {
+                var prefixStrings = getProcessContext().getPrefixStrings().get();
+                if (prefixStrings != null) {
+                    switch (prefixType) {
+                        case SEARCH: {
+                            if (Strings.isNullOrEmpty(prefixStrings.searchPrefix()) == false) {
+                                inputText = prefixStrings.searchPrefix() + inputText;
+                            }
+                        }
+                            break;
+                        case INGEST: {
+                            if (Strings.isNullOrEmpty(prefixStrings.ingestPrefix()) == false) {
+                                inputText = prefixStrings.ingestPrefix() + inputText;
+                            }
+                        }
+                            break;
+                        default:
+                            throw new IllegalStateException("[" + getDeploymentId() + "] Unhandled input prefix type [" + prefixType + "]");
+                    }
+                }
+            }
+
             // The request builder expect a list of inputs which are then batched.
             // TODO batching was implemented for expected use-cases such as zero-shot classification but is not used here.
-            List<String> text = Collections.singletonList(input.extractInput(getProcessContext().getModelInput().get()));
+            var inputs = List.of(inputText);
+
             NlpTask.Processor processor = getProcessContext().getNlpTaskProcessor().get();
-            processor.validateInputs(text);
+            processor.validateInputs(inputs);
             assert config instanceof NlpConfig;
             NlpConfig nlpConfig = (NlpConfig) config;
+
+            int span = nlpConfig.getTokenization().getSpan();
+            if (chunkResponse && nlpConfig.getTokenization().getSpan() <= 0) {
+                // set to special value that means find and use the default for chunking
+                span = NlpTokenizer.CALC_DEFAULT_SPAN_VALUE;
+            }
+
             NlpTask.Request request = processor.getRequestBuilder(nlpConfig)
-                .buildRequest(text, requestIdStr, nlpConfig.getTokenization().getTruncate(), nlpConfig.getTokenization().getSpan());
+                .buildRequest(
+                    inputs,
+                    requestIdStr,
+                    nlpConfig.getTokenization().getTruncate(),
+                    span,
+                    nlpConfig.getTokenization().maxSequenceLength()
+                );
             logger.debug(() -> format("handling request [%s]", requestIdStr));
 
             // Tokenization is non-trivial, so check for cancellation one last time before sending request to the native process
@@ -154,7 +199,11 @@ class InferencePyTorchAction extends AbstractPyTorchAction<InferenceResults> {
             onFailure("inference task cancelled");
             return;
         }
-        InferenceResults results = inferenceResultsProcessor.processResult(tokenization, pyTorchResult.inferenceResult());
+        InferenceResults results = inferenceResultsProcessor.processResult(
+            tokenization,
+            pyTorchResult.inferenceResult(),
+            this.chunkResponse
+        );
         logger.debug(() -> format("[%s] processed result for request [%s]", getDeploymentId(), getRequestId()));
         onSuccess(results);
     }
